Configuracion Jenkins y Sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 #Metadatos del proyecto
-sonar.projectDesciption=reservas
+sonar.projectDesciption=hostal
 sonar.projectVersion=1.0
 sonar.java.source=11
 sonar.java.target=11
@@ -18,3 +18,11 @@ backend.sonar.java.test.binaries=dominio/build/classes/java/test,infraestructura
 backend.sonar.test.java.libraries=/opt/ic/.gradle/caches/modules-2/files-2.1/**/*.jar
 backend.sonar.coverage.jacoco.xmlReportPaths=dominio/build/reports/jacoco/test/jacocoTestReport.xml,infraestructura/build/reports/jacoco/test/jacocoTestReport.xml
 backend.sonar.junit.reportPaths=dominio/build/test-results/test,infraestructura/build/test-results/test
+
+#Excepciones lombok
+config.stopBubbling=true
+lombok.addLombokGeneratedAnnotation=true
+
+# Información del proyecto
+sonar.projectKey=co.com.ceiba:adn:hostal-henry.mosquera
+sonar.projectName=CeibaADN-Hostal(henry.mosquera)
