--- a/microservicio/build.gradle
+++ b/microservicio/build.gradle
@@ -9,7 +9,7 @@ buildscript {
 }
 
 plugins {
-	id 'org.springframework.boot' version  "${springBootVersion}"
+	id 'org.springframework.boot' version  '2.5.3'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 	id 'info.solidsoft.pitest' version '1.7.0'
