--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -24,5 +24,5 @@ config.stopBubbling=true
 lombok.addLombokGeneratedAnnotation=true
 
 # Información del proyecto
-sonar.projectKey=co.com.ceiba:adn:hostal-henry.mosquera
+sonar.projectKey=co.com.ceiba:adn:hostal.henry.mosquera
 sonar.projectName=CeibaADN-Hostal(henry.mosquera)
