--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,8 @@
+sonar.projectKey=co.com.ceiba:adn:reservas-henry.mosquera
+sonar.projectName=CeibaADN-Hostal(henry.mosquera)
+
 #Metadatos del proyecto
-sonar.projectDesciption=hostal
+sonar.projectDesciption=reservas
 sonar.projectVersion=1.0
 sonar.java.source=11
 sonar.java.target=11
@@ -23,6 +26,4 @@ backend.sonar.junit.reportPaths=dominio/build/test-results/test,infraestructura/
 config.stopBubbling=true
 lombok.addLombokGeneratedAnnotation=true
 
-# Información del proyecto
-sonar.projectKey=co.com.ceiba:adn:hostal.henry.mosquera
-sonar.projectName=CeibaADN-Hostal(henry.mosquera)
+
