--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,28 +1,36 @@
-sonar.projectKey=co.com.ceiba:adn:reservas-henry.mosquera
+sonar.projectKey=co.com.ceiba:adn:hostal.henry.mosquera
 sonar.projectName=CeibaADN-Hostal(henry.mosquera)
 
-#Metadatos del proyecto
-sonar.projectDesciption=reservas
+# Metadatos del proyecto
+sonar.projectDesciption=hostal
 sonar.projectVersion=1.0
 sonar.java.source=11
 sonar.java.target=11
 sonar.sourceEncoding=UTF-8
 
 # Modules
-sonar.modules=backend
+sonar.modules=dominio,infraestructura
+
+
+# Dominio, Infraestructura
+dominio.sonar.projectBaseDir=./microservicio/dominio/
+infraestructura.sonar.projectBaseDir=./microservicio/infraestructura/
+
+# Fuente y binarios
+sonar.sources=src/main/java
+sonar.java.binaries=build/classes/java/main
+sonar.java.libraries=/opt/ic/.gradle/caches/modules-2/files-2.1/**/*.jar
+
+# Fuente y binarios de los tests
+sonar.tests=src/test/java
+sonar.java.test.binaries=build/classes/java/test
+sonar.java.test.libraries=/opt/ic/.gradle/caches/modules-2/files-2.1/**/*.jar
 
 # Backend
-backend.sonar.projectBaseDir=./microservicio
-backend.sonar.sources=aplicacion/src/main/java,dominio/src/main/java,infraestructura/src/main/java
-backend.sonar.java.binaries=aplicacion/build/classes/java/main,dominio/build/classes/java/main,infraestructura/build/classes/java/main
-backend.sonar.java.libraries=/opt/ic/.gradle/caches/modules-2/files-2.1/**/*.jar
-backend.sonar.tests=dominio/src/test/java,infraestructura/src/test/java
-backend.sonar.java.test.binaries=dominio/build/classes/java/test,infraestructura/build/classes/java/test
-backend.sonar.test.java.libraries=/opt/ic/.gradle/caches/modules-2/files-2.1/**/*.jar
-backend.sonar.coverage.jacoco.xmlReportPaths=dominio/build/reports/jacoco/test/jacocoTestReport.xml,infraestructura/build/reports/jacoco/test/jacocoTestReport.xml
-backend.sonar.junit.reportPaths=dominio/build/test-results/test,infraestructura/build/test-results/test
+sonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
+sonar.junit.reportPaths=build/test-results/test
 
-#Excepciones lombok
+# Excepciones lombok
 config.stopBubbling=true
 lombok.addLombokGeneratedAnnotation=true
 
