--- a/microservicio/infraestructura/build.gradle
+++ b/microservicio/infraestructura/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	testImplementation project.ext.springboottest
 	implementation project.ext.springbootweb
 	implementation project.ext.swagger
+	implementation project.ext.jacksondataformat
 
 	implementation project.ext.apachecommons
 	implementation project.ext.springbootjdbc
